# api/docs/swagger.json
@@ -245,9 +245,9 @@
                 }
             }
         },
-        "/user/refresh-token": {
+        "/user/refresh-token/{email}/{password}": {
             "post": {
-                "description": "This endpoint refreshes the signing key and returns a confirmation message.",
+                "description": "Refreshes the JWT token by validating the user's credentials and generating a new token.",
                 "consumes": [
                     "application/json"
                 ],
@@ -255,14 +255,36 @@
                     "application/json"
                 ],
                 "tags": [
-                    "authentication"
+                    "Authentication"
                 ],
-                "summary": "Refreshe Token",
+                "summary": "Refresh the JWT token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User Email",
+                        "name": "email",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "User Password",
+                        "name": "password",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "202": {
+                        "description": "Returns the new JWT and Refresh Token",
                         "schema": {
                             "$ref": "#/definitions/user.RefreshTokenResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "error\": \"Invalid credentials",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "500": {
@@ -387,7 +409,10 @@
         "user.RefreshTokenResponse": {
             "type": "object",
             "properties": {
-                "message": {
+                "accsess_token": {
+                    "type": "string"
+                },
+                "resresh_token": {
                     "type": "string"
                 }
             }
